revise the contrast color of button, revise the plurals problems in some controller functions, fix the CSS style that wide photo is overflow in the All post page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,6 +16,7 @@
     justify-content: space-between;
     border: 2px solid grey;
     padding: 0 4px;
+    overflow: hidden;
 }
 
 .post img {
